# sdr_receiver_dvb_t2

./: CMakeLists.txt  README  make_debian_package.sh  make_rpm_package.sh  sdr_receiver_dvb_t2.desktop
.github/workflows/: build_all.yml
docker_builds/debian_bookworm/: do_build.sh
docker_builds/debian_trixie/: do_build.sh
docker_builds/fedora_42/: Dockerfile  do_build.sh
docker_builds/fedora_43/: Dockerfile
docker_builds/ubuntu_noble/: do_build.sh
docker_builds/ubuntu_questing/: Dockerfile  do_build.sh
sdr_receiver_dvb_t2/: CMakeLists.txt  main_window.cpp  rx_sdrplay.cpp  rx_sdrplay.h  sdr_receiver_dvb_t2.pro
src/: aligned_ptr.h  main_window.cpp  main_window.h  main_window.ui  plot.cpp  plot.h  rx_airspy.cpp  rx_airspy.h  rx_base.cpp  rx_base.h  rx_hackrf.cpp  rx_hackrf.h  rx_interface.h  rx_miri.cpp  rx_miri.h  rx_plutosdr.cpp  rx_plutosdr.h  rx_raw.cpp  rx_raw.h  rx_sdrplay.cpp  rx_sdrplay.h  rx_usrp.cpp  rx_usrp.h  sdr_receiver_dvb_t2.pro
src/DSP/: buffers.hh  filter_decimator.h
src/DVB_T2/: bb_de_header.cpp  bb_de_header.h  bch_decoder.cpp  bch_decoder.h  data_symbol.cpp  data_symbol.h  dvbt2_definition.h  dvbt2_demodulator.cpp  dvbt2_demodulator.h  fc_symbol.cpp  fc_symbol.h  ldpc_decoder.cpp  ldpc_decoder.h  llr_demapper.cpp  llr_demapper.h  p1_symbol.cpp  p1_symbol.h  p2_symbol.cpp  p2_symbol.h  pilot_generator.cpp  pilot_generator.h  time_deinterleaver.cpp  time_deinterleaver.h
src/DVB_T2/LDPC/: layered_decoder.hh
